# OpenCV

./: CMakeLists.txt  README.md  vcpkg.json
include/challenge/: ai.h  app.h  input.h  overlay.h
src/: ai.cpp  app.cpp  input.cpp  main.cpp  overlay.cpp
