cmake_minimum_required(VERSION 3.22)
project(nova_cad_code_challenge)
set(CMAKE_TOOLCHAIN_FILE ${CMAKE_CURRENT_SOURCE_DIR}/external/vcpkg/scripts/buildsystems/vcpkg.cmake
        CACHE STRING "Vcpkg toolchain file")

set(VCPKG_TARGET_TRIPLET "x64-windows")
set(VCPKG_OVERLAY_PORTS ${CMAKE_CURRENT_SOURCE_DIR}/vcpkg_ports)
set(VCPKG_ROOT ${CMAKE_CURRENT_SOURCE_DIR}/external/vcpkg)

set(CMAKE_CXX_STANDARD 17)

# build for x86_64, because that is how the brew package is compiled
set(CMAKE_OSX_ARCHITECTURES "x86_64")

file(GLOB SRCS ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)

add_executable(nova_cad_code_challenge ${SRCS})
target_include_directories(nova_cad_code_challenge PUBLIC include)

FIND_PACKAGE(OpenCV REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS})
target_link_libraries(nova_cad_code_challenge ${OpenCV_LIBS})
